[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/enemy_bear.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Bear.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animations/enemy_death.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=4]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;


void fragment(){
	
	
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6, 1.5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "bear_down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 7, 6 ]
}

[sub_resource type="Animation" id=13]
resource_name = "bear_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 11, 10 ]
}

[sub_resource type="Animation" id=14]
resource_name = "bear_up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 12, 15, 14 ]
}

[sub_resource type="Animation" id=15]
resource_name = "bear_wall_hit"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "damage_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0588235 ), Color( 0, 0, 0, 0.137255 ), Color( 1, 1, 1, 0.407843 ), Color( 0, 0, 0, 0.521569 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2.82843, 2.47487 ), Vector2( 0.176773, -2.12132 ), Vector2( -7.07107, -0.707108 ), Vector2( 0, 0 ) ]
}

[node name="World_Bear" type="KinematicBody2D"]
z_index = 2
collision_layer = 4
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5

[node name="Body_Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 15

[node name="Area_Shape" type="CollisionShape2D" parent="Area"]
position = Vector2( 0, 10 )
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]

[node name="Enemy_Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/damage_anim = ExtResource( 4 )
anims/enemy_death = ExtResource( 3 )

[node name="Bear_Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/bear_down = SubResource( 12 )
anims/bear_left = SubResource( 13 )
anims/bear_up = SubResource( 14 )
anims/bear_wall_hit = SubResource( 15 )
anims/damage_anim = SubResource( 16 )
anims/enemy_death = SubResource( 17 )

[node name="Detect_Player" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 67 )

[node name="Rush_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Rush_Timer" to="." method="_on_Rush_Timer_timeout"]
